@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 26-jan-2010 Christophe Demko
 ^ Readding the possibility of setting the array parameter for a group different from true and false
+# Correcting bugs in installer adapters
 
 26-Jan-2010 Hannes Papenberg
 # Improved performance of JPluginHelper - Thanks Omar!
